@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2005/02/24 11:02:57 agc Exp $
+$NetBSD: distinfo,v 1.3 2006/01/14 13:55:28 wulf Exp $
 
-SHA1 (qbrew-0.3.4.tar.gz) = a908d20fdb00f48833ae451d647242bb4d43dd51
-RMD160 (qbrew-0.3.4.tar.gz) = 76a7d64ba729c7d380a2737d0da6e3caa54d3c2c
-Size (qbrew-0.3.4.tar.gz) = 393257 bytes
+SHA1 (qbrew-0.3.5.tar.gz) = ec67830af5adb413a60c79c59c350467abb6ba7c
+RMD160 (qbrew-0.3.5.tar.gz) = 3134f2763164ba6e9b1200e61f8fe8d1ca916fd4
+Size (qbrew-0.3.5.tar.gz) = 458523 bytes
